# opencf-core

./: .flake8  README.md  pyproject.toml
convcore/: base_converter.py  converter_app.py  filetypes.py  io_handler.py
docs/: index.md  pyproject.part.toml  requirements.txt
docs/source/: conf.py  index.rst  readme.rst
docs/source/convcore/: convcore.rst  modules.rst
docs/source/opencf_core/: modules.rst  opencf_core.rst
examples/: cli_app_example.py  readme.md  simple_converter.py  spreadsheet_converter.py
examples/data/: example.csv  example.json
opencf_core/: base_converter.py  converter_app.py  file_handler.py  filetypes.py  io_handler.py  logging_config.py
scripts/: run-build-docu.sh  run-format.sh  run-pydeps.sh  run-tests.sh
tests/: test_ensure_iterable.py  test_enum.py  test_filepath_parser.py  test_filetype_functions.py  test_filetypes.py  test_mimetype_module.py
