[tool.poetry]
name = "openconv-core"
packages = [
    {include = "convcore"}
]
version = "0.1.5"
description = "A robust framework for handling file conversion tasks in Python"
authors = ["Hermann Agossou <agossouhermann7@gmail.com>"]
readme = "README.md"
maintainers = [
    "Hermann Agossou <agossouhermann7@gmail.com>"
]
license = "MIT"
homepage = "https://hermann-web.github.io/blog/projects/introducing-two-new-packages-for-streamlining-file-conversions-in-python/"
repository = "https://github.com/Hermann-web/file-converter"
documentation = "https://github.com/Hermann-web/file-converter/blob/main/openconv-core/docs/index.md"
keywords = ["file conversion", "data processing", "file formats"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.8.1"
loguru = "^0.7.2"
python-magic = "^0.4.27"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.0"
flake8 = "^7.0.0"

[tool.poetry.group.buildthedocs.dependencies]
sphinx = "^7.0.0"
sphinx-rtd-theme = "^2.0.0"
m2r2 = "^0.3.3.post2"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
